--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_bloc: ^8.0.1
+  flutter_staggered_animations: ^1.0.0
   freezed: ^1.1.1
   freezed_annotation: ^1.1.0
   http: ^0.13.4
